# OpenGL-tutorial

./: .gitignore  CMakeLists.txt  conanfile.py
dependencies/glad/include/glad/: glad.h
src/: Main.cpp
